refactor: using new base image now, massive refactoring of dockerfile core